correction jump mvts

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,16 @@ body{
     display: flex;
     justify-content: center;
 }
+
+#wrapper{
+    position: relative;
+}
+
+#wrapper>div{
+    border: 2px dotted #fff;
+    position: absolute;
+    top: 50px;
+    width: 20%;
+    margin: 0 auto;
+    text-align: center;
+}
